@@ -17,13 +17,15 @@ import br.com.xbrain.autenticacao.modules.usuario.model.Usuario;
 import br.com.xbrain.autenticacao.modules.usuario.model.UsuarioHistorico;
 import br.com.xbrain.autenticacao.modules.usuario.repository.UsuarioRepository;
 import br.com.xbrain.autenticacao.modules.usuario.service.UsuarioHistoricoService;
+import br.com.xbrain.autenticacao.modules.usuario.service.UsuarioService;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.ObjectUtils;
 
-import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -33,6 +35,7 @@ import static br.com.xbrain.autenticacao.modules.comum.enums.ETipoFeederMso.RESI
 import static br.com.xbrain.autenticacao.modules.feeder.service.FeederUtil.*;
 
 @Service
+@Slf4j
 public class FeederService {
 
     private static final NotFoundException EX_NAO_ENCONTRADO = new NotFoundException("Usuario não encontrado.");
@@ -48,12 +51,14 @@ public class FeederService {
     private UsuarioRepository usuarioRepository;
     @Autowired
     private DataHoraAtual dataHoraAtual;
+    @Autowired
+    private UsuarioService usuarioService;
 
     @Transactional
     public void atualizarPermissaoFeeder(AgenteAutorizadoPermissaoFeederDto agenteAutorizadoPermissaoFeederDto) {
         if (agenteAutorizadoPermissaoFeederDto.hasPermissaoFeeder()) {
             var permissoes = getNovasPermissoesEspeciais(agenteAutorizadoPermissaoFeederDto);
-            salvarPermissoesEspeciais(permissoes);
+            usuarioService.salvarPermissoesEspeciais(permissoes);
             gerarUsuarioHistorico(getUsuariosIds(permissoes), true);
         } else if (!agenteAutorizadoPermissaoFeederDto.hasPermissaoFeeder()) {
             var usuariosIds = agenteAutorizadoPermissaoFeederDto.getColaboradoresVendasIds().stream()
@@ -95,23 +100,25 @@ public class FeederService {
                 .map(usuarioNovo -> getPermissoesEspeciaisDoColobarodaorConformeCargo(usuarioNovo,
                     usuarioMqRequest.getUsuarioCadastroId(), usuarioMqRequest.getCargo()))
                 .orElse(List.of());
-            salvarPermissoesEspeciais(permissoesFeeder);
+            usuarioService.salvarPermissoesEspeciais(permissoesFeeder);
         }
     }
 
     public void adicionarPermissaoFeederParaUsuarioNovoMso(Usuario usuario) {
-        var permissoesTiposFeeder = usuarioRepository.findById(usuario.getId())
-            .map(usuarioNovo -> getPermissoesEspeciaisDoUsuario(usuario.getId(),
-                usuario.getUsuarioCadastro().getId(), getPermissoesTiposFeederMso(usuario)))
-            .orElse(List.of());
+        if (usuario.isIdNivelMso()) {
+            var permissoesTiposFeeder = usuarioRepository.findById(usuario.getId())
+                .map(usuarioNovo -> usuarioService.getPermissoesEspeciaisDoUsuario(usuario.getId(),
+                    usuario.getUsuarioCadastro().getId(), getPermissoesTiposFeederMso(usuario)))
+                .orElse(Collections.emptyList());
 
-        salvarPermissoesEspeciais(permissoesTiposFeeder);
+            usuarioService.salvarPermissoesEspeciais(permissoesTiposFeeder);
+        }
     }
 
     private List<Integer> getPermissoesTiposFeederMso(Usuario usuario) {
         var listaFuncionalidades = new ArrayList<Integer>();
 
-        if (Objects.nonNull(usuario.getTiposFeeder())) {
+        if (!ObjectUtils.isEmpty(usuario.getTiposFeeder())) {
             if (usuario.getTiposFeeder().contains(RESIDENCIAL)) {
                 listaFuncionalidades.addAll(FUNCIONALIDADES_FEEDER_PARA_MSO_RESIDENCIAL);
             }
@@ -186,12 +193,6 @@ public class FeederService {
             .collect(Collectors.toList());
     }
 
-    private void salvarPermissoesEspeciais(List<PermissaoEspecial> permissoesEspeciais) {
-        if (!ObjectUtils.isEmpty(permissoesEspeciais)) {
-            permissaoEspecialRepository.save(permissoesEspeciais);
-        }
-    }
-
     public void removerPermissoesEspeciais(List<Integer> usuarios) {
         permissaoEspecialRepository.deletarPermissaoEspecialBy(FUNCIONALIDADES_FEEDER_PARA_AA, usuarios);
     }
@@ -199,9 +200,11 @@ public class FeederService {
     private List<PermissaoEspecial> getNovasPermissoesEspeciais(AgenteAutorizadoPermissaoFeederDto aaPermissaoFeederDto) {
         var permissoesEspeciais = getPermissoesEspeciaisDosColaboradores(aaPermissaoFeederDto.getColaboradoresVendasIds(),
             aaPermissaoFeederDto.getUsuarioCadastroId());
+
         permissoesEspeciais.addAll(getPermissaoEspecialSocioPrincipal(
             aaPermissaoFeederDto.getUsuarioProprietarioId(),
             aaPermissaoFeederDto.getUsuarioCadastroId()));
+
         return permissoesEspeciais;
     }
 
@@ -220,36 +223,23 @@ public class FeederService {
     private List<PermissaoEspecial> getPermissoesEspeciaisDoColobarodaorConformeCargo(Usuario colaborador,
                                                                                       Integer usuarioCadastroId,
                                                                                       CodigoCargo cargoCodigo) {
-        if (isBackOffice(cargoCodigo)) {
-            return getPermissoesEspeciaisDoUsuario(colaborador.getId(), usuarioCadastroId, FUNCIONALIDADES_FEEDER_PARA_AA);
+        if (isBackOfficeOrSocioSecundario(cargoCodigo)) {
+            return usuarioService.getPermissoesEspeciaisDoUsuario(colaborador.getId(), usuarioCadastroId,
+                FUNCIONALIDADES_FEEDER_PARA_AA);
         }
-        return getPermissoesEspeciaisDoUsuario(colaborador.getId(), usuarioCadastroId, List.of(FUNCIONALIDADE_TRATAR_LEAD_ID));
+        return usuarioService.getPermissoesEspeciaisDoUsuario(colaborador.getId(), usuarioCadastroId,
+            List.of(FUNCIONALIDADE_TRATAR_LEAD_ID));
     }
 
-    private List<PermissaoEspecial> getPermissoesEspeciaisDoUsuario(Integer usuarioId, Integer usuarioCadastroId,
-                                                                    List<Integer> funcionalidadesIds) {
-        return funcionalidadesIds.stream()
-            .filter(funcionalidadeId -> permissaoEspecialRepository.findOneByUsuarioIdAndFuncionalidadeIdAndDataBaixaIsNull(
-                usuarioId, funcionalidadeId).isEmpty())
-            .map(funcionalidadeId -> criarPermissaoEspecial(usuarioId, funcionalidadeId, usuarioCadastroId))
-            .collect(Collectors.toList());
+    private List<PermissaoEspecial> getPermissaoEspecialSocioPrincipal(Integer socioPrincipalId,
+                                                                       Integer usuarioCadastroId) {
+        return usuarioService.getPermissoesEspeciaisDoUsuario(socioPrincipalId, usuarioCadastroId,
+            FUNCIONALIDADES_FEEDER_PARA_AA);
     }
 
-    private List<PermissaoEspecial> getPermissaoEspecialSocioPrincipal(Integer socioPrincipalId, Integer usuarioCadastroId) {
-        return getPermissoesEspeciaisDoUsuario(socioPrincipalId, usuarioCadastroId, FUNCIONALIDADES_FEEDER_PARA_AA);
-    }
-
-    private PermissaoEspecial criarPermissaoEspecial(Integer usuarioId, Integer funcionalidadeId, Integer usuarioCadastroId) {
-        return PermissaoEspecial.builder()
-            .funcionalidade(new Funcionalidade(funcionalidadeId))
-            .usuarioCadastro(new Usuario(usuarioCadastroId))
-            .usuario(new Usuario(usuarioId))
-            .dataCadastro(LocalDateTime.now())
-            .build();
-    }
-
-    private boolean isBackOffice(CodigoCargo codigoCargo) {
-        return Objects.nonNull(codigoCargo) && CARGOS_BACKOFFICE.contains(codigoCargo);
+    private boolean isBackOfficeOrSocioSecundario(CodigoCargo codigoCargo) {
+        return codigoCargo != null
+            && (CARGOS_BACKOFFICE.contains(codigoCargo) || CARGOS_SOCIO_SECUNDARIO.contains(codigoCargo));
     }
 
     public void salvarPermissoesEspeciaisCoordenadoresGerentes(List<Integer> usuariosIds, int usuarioLogado) {
@@ -270,6 +260,30 @@ public class FeederService {
                             .build())
                         .collect(Collectors.toList()));
             }
+            }
+        );
+    }
+
+    public void salvarPermissoesEspeciaisSociosSecundarios(List<Integer> usuariosIds, int usuarioAutenticadoId) {
+        usuariosIds.forEach(usuarioId -> {
+                if (usuarioRepository.exists(usuarioId)) {
+                    var permissoes = permissaoEspecialRepository.findByUsuario(usuarioId);
+                    log.info("Atualizando Usuario: {}", usuarioId);
+                    log.info("Permissoes do usuario: {}", permissoes);
+                    permissaoEspecialRepository.save(
+                        FUNCIONALIDADES_FEEDER_PARA_AA
+                            .stream()
+                            .filter(funcionalidade -> !permissoes.contains(funcionalidade))
+                            .map(id -> PermissaoEspecial
+                                .builder()
+                                .funcionalidade(new Funcionalidade(id))
+                                .usuario(new Usuario(usuarioId))
+                                .dataCadastro(dataHoraAtual.getDataHora())
+                                .usuarioCadastro(new Usuario(usuarioAutenticadoId))
+                                .build())
+                            .collect(Collectors.toList()));
+                    log.info("Permissões do usuario {} atualizadas", usuarioId);
+                }
             }
         );
     }
