@@ -1,152 +1,163 @@
 package br.com.xbrain.autenticacao.modules.permissao.controller;
 
-import br.com.xbrain.autenticacao.modules.parceirosonline.service.AgenteAutorizadoClient;
+import br.com.xbrain.autenticacao.config.OAuth2ResourceConfig;
+import br.com.xbrain.autenticacao.modules.equipevenda.service.EquipeVendaD2dService;
 import br.com.xbrain.autenticacao.modules.permissao.dto.PermissaoEspecialRequest;
-import br.com.xbrain.autenticacao.modules.usuario.enums.CodigoCargo;
+import br.com.xbrain.autenticacao.modules.permissao.service.PermissaoEspecialService;
+import br.com.xbrain.autenticacao.modules.usuario.event.UsuarioSubCanalObserver;
 import helpers.TestsHelper;
 import lombok.SneakyThrows;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.test.mock.mockito.MockBeans;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
+import org.springframework.security.oauth2.provider.token.TokenStore;
+import org.springframework.security.test.context.support.WithAnonymousUser;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
 import java.util.List;
 
-import static helpers.TestsHelper.getAccessToken;
-import static helpers.Usuarios.ADMIN;
-import static helpers.Usuarios.SOCIO_AA;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @ActiveProfiles("test")
 @RunWith(SpringRunner.class)
-@SpringBootTest
-@AutoConfigureMockMvc
-@Transactional
-@Sql(scripts = "classpath:/tests_database.sql")
+@WebMvcTest(PermissaoEspecialController.class)
+@MockBeans({
+    @MockBean(EquipeVendaD2dService.class),
+    @MockBean(TokenStore.class),
+    @MockBean(UsuarioSubCanalObserver.class),
+})
+@Import(OAuth2ResourceConfig.class)
 public class PermissaoEspecialControllerTest {
 
     private static final String URL = "/api/permissoes-especiais";
+    private static final String USUARIO_SOCIO = "USUARIO SOCIO";
+    private static final String USUARIO_ADMIN = "USUARIO ADMIN";
+    private static final String AUT_VISUALIZAR_USUARIO = "AUT_VISUALIZAR_USUARIO";
+    private static final String AUT_GER_PERMISSAO_ESPECIAL_USUARIO = "AUT_GER_PERMISSAO_ESPECIAL_USUARIO";
 
     @Autowired
     private MockMvc mvc;
-
     @MockBean
-    private AgenteAutorizadoClient agenteAutorizadoClient;
+    private PermissaoEspecialService permissaoEspecialService;
 
     @Test
-    public void getAll_unauthorized_quandoNaoPassarAToken() throws Exception {
+    @SneakyThrows
+    public void getAll_unauthorized_quandoNaoPassarAToken() {
         mvc.perform(get(URL)
                 .accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isUnauthorized());
     }
 
     @Test
-    public void save_forbidden_quandoNaoTiverPermissaoParaPermissoesEspeciais() throws Exception {
+    @SneakyThrows
+    @WithMockUser(username = USUARIO_SOCIO, roles = { AUT_VISUALIZAR_USUARIO })
+    public void save_forbidden_quandoNaoTiverPermissaoParaPermissaoEspecialUsuario() {
         mvc.perform(post(URL)
-                .header("Authorization", getAccessToken(mvc, SOCIO_AA))
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(TestsHelper.convertObjectToJsonBytes(novasPermissoes())))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    public void deveSalvar() throws Exception {
-        mvc.perform(post("/api/permissoes-especiais")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(TestsHelper.convertObjectToJsonBytes(novasPermissoes())))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    public void deveRemoverUmaPermissao() throws Exception {
-        mvc.perform(put("/api/permissoes-especiais/remover/101/26")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.dataBaixa", notNullValue()))
-            .andExpect(jsonPath("$.usuarioBaixa", notNullValue()));
+            .andExpect(status().isForbidden());
     }
 
     @Test
     @SneakyThrows
+    @WithMockUser(username = USUARIO_ADMIN, roles = { AUT_GER_PERMISSAO_ESPECIAL_USUARIO })
+    public void save_deveSalvarPermissoesEspeciais_seUsuarioTiverPermissaoParaPermissaoEspecialUsuario() {
+        mvc.perform(post(URL)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(TestsHelper.convertObjectToJsonBytes(novasPermissoes())))
+            .andExpect(status().isOk());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser
+    public void remover_deveRemoverUmaPermissao_seUsuarioAutenticado() {
+        mvc.perform(put(URL + "/remover/{usuarioId}/{funcionalidadeId}",101, 26)
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
     public void processarPermissoesEspeciaisGerentesCoordenadores_deveRetornarUnauthorized_quandoUsuarioNaoAutenticado() {
         mvc.perform(post(URL + "/processar-permissoes-gerentes-coordenadores")
                 .accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isUnauthorized());
-
-        verify(agenteAutorizadoClient, times(0)).getUsuariosAaFeederPorCargo(anyList(), anyList());
     }
 
     @Test
     @SneakyThrows
+    @WithMockUser
     public void processarPermissoesEspeciaisGerentesCoordenadores_deveRetornarOk_seListaIdsVazia() {
-        when(agenteAutorizadoClient.getUsuariosAaFeederPorCargo(umaListaAaIdsVazia(),
-            umaListaCargos())).thenReturn(List.of(1, 2));
         mvc.perform(post(URL + "/processar-permissoes-gerentes-coordenadores")
                 .param("aaIds", "")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
                 .accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isOk());
-
-        verify(agenteAutorizadoClient, times(1)).getUsuariosAaFeederPorCargo(umaListaAaIdsVazia(), umaListaCargos());
     }
 
     @Test
     @SneakyThrows
-    public void processarPermissoesEspeciaisGerentesCoordenadores_deveRetornarOk_seListaIdsPreenchida() {
-        when(agenteAutorizadoClient.getUsuariosAaFeederPorCargo(umaListaAaIds(), umaListaCargos())).thenReturn(List.of(1, 2));
-        mvc.perform(post(URL + "/processar-permissoes-gerentes-coordenadores")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
+    @WithAnonymousUser
+    public void reprocessarPermissoesEspeciaisSociosSecundarios_deveRetornarUnauthorized_quandoTokenInvalido() {
+        mvc.perform(post(URL + "/reprocessar-permissoes-socios-secundarios")
                 .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk());
+            .andExpect(status().isUnauthorized());
 
-        verify(agenteAutorizadoClient, times(1)).getUsuariosAaFeederPorCargo(null, umaListaCargos());
+        verifyZeroInteractions(permissaoEspecialService);
     }
 
     @Test
     @SneakyThrows
-    public void processarPermissoesEspeciaisGerentesCoordenadores_deveRetornarOk_quandoUsuarioNaoForAdmin() {
-        mvc.perform(post(URL + "/processar-permissoes-gerentes-coordenadores")
-                .header("Authorization", getAccessToken(mvc, SOCIO_AA))
+    @WithMockUser
+    public void reprocessarPermissoesEspeciaisSociosSecundarios_deveRetornarOk_quandoListaVazia() {
+        mvc.perform(post(URL + "/reprocessar-permissoes-socios-secundarios")
+                .param("aaIds", "")
                 .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isForbidden());
+            .andExpect(status().isOk());
 
-        verify(agenteAutorizadoClient, never()).getUsuariosAaFeederPorCargo(anyList(), anyList());
+        verify(permissaoEspecialService).reprocessarPermissoesEspeciaisSociosSecundarios(List.of());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser
+    public void reprocessarPermissoesEspeciaisSociosSecundarios_deveRetornarOk_quandoListaPreenchida() {
+        mvc.perform(post(URL + "/reprocessar-permissoes-socios-secundarios")
+                .param("aaIds", "123")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(permissaoEspecialService).reprocessarPermissoesEspeciaisSociosSecundarios(List.of(123));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser
+    public void reprocessarPermissoesEspeciaisSociosSecundarios_deveRetornarOk_quandoListaNull() {
+        mvc.perform(post(URL + "/reprocessar-permissoes-socios-secundarios")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(permissaoEspecialService).reprocessarPermissoesEspeciaisSociosSecundarios(null);
     }
 
     private PermissaoEspecialRequest novasPermissoes() {
-        PermissaoEspecialRequest res = new PermissaoEspecialRequest();
-        res.setUsuarioId(1);
-        res.setFuncionalidadesIds(Arrays.asList(1, 2, 3, 4));
-        return res;
-    }
-
-    private List<CodigoCargo> umaListaCargos() {
-        return List.of(
-            CodigoCargo.AGENTE_AUTORIZADO_GERENTE,
-            CodigoCargo.AGENTE_AUTORIZADO_COORDENADOR);
-    }
-
-    private List<Integer> umaListaAaIdsVazia() {
-        return List.of();
-    }
-
-    private List<Integer> umaListaAaIds() {
-        return List.of(1, 2);
+        PermissaoEspecialRequest request = new PermissaoEspecialRequest();
+        request.setUsuarioId(1);
+        request.setFuncionalidadesIds(Arrays.asList(1, 2, 3, 4));
+        return request;
     }
 }
